--- a/codefest-teamwork-noizies/src/main/resources/application.properties
+++ b/codefest-teamwork-noizies/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/noizies?verifyServerCertificate=false&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/noizies?verifyServerCertificate=false&autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=27867856@Ax
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+jwt.secret=javainuse
 
